--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Stayu - Find Your Perfect Stay or Workspace</title>
-    <meta name="description" content="Discover and book hotels and shared office spaces with ease. Browse verified properties, compare prices, and pay in cash at arrival. Find your perfect stay or workspace with Stayu." />
+    <title>SpaceMate - Find Your Perfect Stay or Workspace</title>
+    <meta name="description" content="Discover and book hotels and shared office spaces with ease. Browse verified properties, compare prices, and pay in cash at arrival. Find your perfect stay or workspace with SpaceMate." />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
